--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -44,8 +44,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: v${{ github.ref }}
-          release_name: ⏩ v${{ github.ref }}
+          tag_name: v${{ github.ref_name }}
+          release_name: ⏩ v${{ github.ref_name }}
           body: ${{ steps.github_release.outputs.changelog }}
           draft: false
           prerelease: false
