--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "prodChrome": "npm run licenseList && npm run chrome && node manage/prodChanges.js && npm run zip",
     "prodFirefox": "npm run licenseList && npm run firefox && node manage/prodChanges.js && npm run zip",
     "--- Build scripts": "---",
-    "build": "node manage/initBuild.js && esbuild src/scripts/background/background.js --bundle --outdir=dist && esbuild src/scripts/content/tab.js --bundle --outdir=dist",
+    "build": "node manage/initBuild.js && esbuild src/scripts/background/background.js --bundle --outdir=dist && esbuild src/scripts/content/tab.js --bundle --outdir=dist && esbuild src/scripts/pages/options.js --bundle --outdir=dist/pages",
     "build:l": "npm run licenseList && npm run build",
     "build:w": "nodemon --exec npm run build --watch",
     "watchAll": "nodemon --exec npm run all --watch",
@@ -34,6 +34,7 @@
     "babel-jest": "^29.7.0",
     "chrome-remote-interface": "^0.33.0",
     "esbuild": "^0.18.11",
+    "esbuild-plugin-html": "^1.0.0",
     "fs-extra": "^11.1.1",
     "gcp-refresh-token": "^0.9.2",
     "jest": "^29.7.0",
@@ -44,8 +45,10 @@
     "selenium-webdriver": "^4.15.0"
   },
   "dependencies": {
+    "@shoelace-style/shoelace": "^2.15.1",
     "dompurify": "^3.0.4",
     "js-yaml": "^4.1.0",
+    "lit": "^3.1.4",
     "showdown": "^2.1.0",
     "turndown": "^7.1.2"
   }
