--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "test": "jest"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.7",
+    "@babel/cli": "^7.24.8",
+    "@babel/core": "^7.24.9",
+    "@babel/plugin-proposal-decorators": "^7.24.7",
     "@babel/preset-env": "^7.23.7",
     "@types/chrome": "^0.0.266",
     "@types/jest": "^29.5.11",
