feat: open popups and windows when selecting menu options

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -11,7 +11,8 @@
   "permissions": [
     "scripting",
     "activeTab",
-    "storage"
+    "storage",
+    "contextMenus"
   ],
   "host_permissions": [
     "*://*.phind.com/*",
