Chore(build): migrate Esbuild from using the command line to using a configuration file, add TypeScript and LitElement support
BREAKING CHANGE: This change affects the project structure and may require updates to existing build scripts and configurations.

--- a/package.json
+++ b/package.json
@@ -1,56 +1,43 @@
 {
-  "name": "save-my-phind",
+  "name": "save-my-chatbot",
   "version": "2.9.7",
   "license": "RMD-C v1.0 License",
+  "author": "Hugo COLLIN",
+  "keywords": [
+    "chatbots",
+    "export",
+    "save",
+    "markdown",
+    "webextension"
+  ],
   "scripts": {
-    "--- Node scripts": "---",
-    "syncVersion": "node manage/syncVersions.js",
-    "licenses": "node manage/listLicenses.js",
-    "convert": "node manage/convertManifest.js",
-    "zip": "node manage/zip.js",
-    "licenseList": "npm run syncVersion && npm run licenses",
-    "--- Browser-specific scripts": "-----",
-    "chrome": "npm run convert chrome && npm run build",
-    "firefox": "npm run convert firefox && npm run build",
-    "prodChrome": "npm run licenseList && npm run chrome && node manage/prodChanges.js && npm run zip",
-    "prodFirefox": "npm run licenseList && npm run firefox && node manage/prodChanges.js && npm run zip",
-    "--- Build scripts": "---",
-    "build": "node manage/initBuild.js && esbuild src/scripts/background/background.js --bundle --outdir=dist && esbuild src/scripts/content/tab.js --bundle --outdir=dist && esbuild src/scripts/pages/pages.js --bundle --outdir=dist/pages",
-    "build:l": "npm run licenseList && npm run build",
-    "build:w": "nodemon --exec npm run build --watch",
-    "watchAll": "nodemon --exec npm run all --watch",
-    "--- Prod scripts": "---",
-    "preprod": "npm run licenseList",
-    "prod": "npm run licenseList && npm run firefox && node manage/prodChanges.js && npm run zip && npm run chrome && node manage/prodChanges.js && npm run zip && node manage/devChanges.js",
-    "--- Test scripts": "---",
-    "test": "jest"
+    "build:chrome": "cross-env TARGET=chrome APP_MODE=dev node esbuild.config.js",
+    "build:firefox": "cross-env TARGET=firefox APP_MODE=dev node esbuild.config.js",
+    "dev:chrome": "cross-env TARGET=chrome APP_MODE=dev WATCH_MODE=true node esbuild.config.js",
+    "dev:firefox": "cross-env TARGET=firefox APP_MODE=dev WATCH_MODE=true node esbuild.config.js",
+    "zip": "node config/zip.js",
+    "prod": "cross-env TARGET=chrome APP_MODE=prod node esbuild.config.js && node config/zip.js && cross-env TARGET=firefox APP_MODE=prod node esbuild.config.js && node config/zip.js",
+    "test": "vitest",
+    "test:watch": "vitest --watch"
   },
   "devDependencies": {
-    "@babel/cli": "^7.24.8",
-    "@babel/core": "^7.24.9",
-    "@babel/plugin-proposal-decorators": "^7.24.7",
-    "@babel/preset-env": "^7.23.7",
-    "@types/chrome": "^0.0.266",
-    "@types/jest": "^29.5.11",
-    "adm-zip": "^0.5.10",
-    "babel-jest": "^29.7.0",
-    "chrome-remote-interface": "^0.33.0",
-    "esbuild": "^0.18.11",
-    "fs-extra": "^11.1.1",
-    "gcp-refresh-token": "^0.9.2",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "jest-fetch-mock": "^3.0.3",
-    "license-checker": "^25.0.1",
-    "nodemon": "^2.0.22",
-    "selenium-webdriver": "^4.15.0"
+    "@types/chrome": "^0.0.270",
+    "@types/showdown": "^2.0.6",
+    "@vitest/browser": "^2.0.5",
+    "adm-zip": "^0.5.15",
+    "chokidar": "^3.6.0",
+    "cross-env": "^7.0.3",
+    "esbuild": "^0.23.1",
+    "jsdom": "^25.0.0",
+    "lit": "^3.2.0",
+    "typescript": "^5.5.4",
+    "vitest": "^2.0.5"
   },
   "dependencies": {
-    "@shoelace-style/shoelace": "^2.15.1",
-    "dompurify": "^3.0.4",
+    "@shoelace-style/shoelace": "^2.16.0",
+    "dompurify": "^3.1.6",
     "js-yaml": "^4.1.0",
-    "lit": "^3.1.4",
     "showdown": "^2.1.0",
-    "turndown": "^7.1.2"
+    "turndown": "^7.2.0"
   }
 }
