--- a/src/manifest.json
+++ b/src/manifest.json
@@ -43,7 +43,7 @@
   }],
   "{{firefox}}.browser_specific_settings": {
     "gecko": {
-      "id": "example@extension.com",
+      "id": "savemyphind@hugocollin.com",
       "strict_min_version": "109.0"
     }
   }
