Revert "Feat(export): Support ChatGPT export (#166)"
This reverts commit 7bc62629224c9bf9d727d1ec6088744cdf1738a9.

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -20,8 +20,7 @@
   "host_permissions": [
     "*://*.phind.com/*",
     "*://*.perplexity.ai/*",
-    "*://google.com/search*",
-    "*://chatgpt.com/*"
+    "*://google.com/search*"
   ],
   "action": {
     "default_icon": "files/icons/icon_disabled-500.png"
@@ -34,8 +33,7 @@
     "matches": [
       "*://*.phind.com/*",
       "*://*.perplexity.ai/*",
-      "*://*.google.com/search*",
-      "*://chatgpt.com/*"
+      "*://*.google.com/search*"
     ],
     "js": ["tab.js"]
   }],
