--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "3.1.1",
   "license": "RMD-C v1.0 License",
   "author": "Hugo COLLIN",
+  "homepage": "https://save.hugocollin.com",
   "keywords": [
     "chatbots",
     "export",
