--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "save-my-chatbot",
-  "version": "3.1.1",
+  "version": "3.1.2",
   "license": "RMD-C v1.0 License",
   "author": "Hugo COLLIN",
+  "homepage": "https://save.hugocollin.com",
   "keywords": [
     "chatbots",
     "export",
