refactor: moving output generation logic to background-script

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -15,7 +15,8 @@
     "scripting",
     "activeTab",
     "storage",
-    "contextMenus"
+    "contextMenus",
+    "downloads"
   ],
   "host_permissions": [
     "*://*.phind.com/*",
