chore: minor fixes

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "save-my-chatbot",
-  "version": "3.6.1.dgr",
+  "version": "3.7.0",
   "license": "RMD-C v1.0 License",
   "author": "Hugo COLLIN",
   "homepage": "https://save.hugocollin.com",
